# scissor

./: Cargo.toml
benches/: shapes.rs
examples/: lines.rs  shape.rs
src/: ext.rs  holed_polygon.rs  lib.rs  mesh.rs  polygon.rs  polyline.rs  shape.rs
src/shapes/: circle.rs  combine.rs  complete.rs  fill.rs  forward.rs  hole.rs  id.rs  line.rs  map.rs  mod.rs  offset.rs  outline.rs  parametric.rs  rect.rs  split.rs  thicken.rs  turn.rs
