[package]
name = "scissor"
version = "0.1.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.2", optional = true, default_features = false }
glam = "0.17.3"

[features]
default = []

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "shapes"
harness = false

